update authorize http requests and permissions